# ChangeLog for app-portage/gentoolkit-dev
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.60 2009/04/29 20:44:33 fuzzyray Exp $

*gentoolkit-dev-0.2.6.10 (29 Apr 2009)

  29 Apr 2009; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-dev-0.2.6.10.ebuild:
  Version Bump to fix issues with git and subversion support. Also fixes
  ekeyword handling of multiline KEYWORDS and echangelog omitting '.ebuild'
  from ChangeLog entries. (Bugs #267250 and #267665)

*gentoolkit-dev-0.2.6.9 (31 Dec 2008)

  31 Dec 2008; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-dev-0.2.6.9.ebuild:
  Version bump to update echangelog with better subversion/git support

  25 Apr 2008; <ricmm@gentoo.org> gentoolkit-dev-0.2.6.2.ebuild:
  Drop to ~mips due to unstable deps

*gentoolkit-dev-0.2.6.8 (14 Mar 2008)

  14 Mar 2008; Paul Varner <fuzzyray@gentoo.org>
  -gentoolkit-dev-0.2.6.7.ebuild, +gentoolkit-dev-0.2.6.8.ebuild:
  Revbump to fix compilation error in echangelog (Bug #213376)

*gentoolkit-dev-0.2.6.7 (13 Mar 2008)

  13 Mar 2008; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-dev-0.2.6.7.ebuild:
  Revbump to release fix for git support in echangelog

*gentoolkit-dev-0.2.6.6 (22 May 2007)

  22 May 2007; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-dev-0.2.6.6.ebuild:
  revbump to fix issues with subversion support to echangelog (Bug #176337)

*gentoolkit-dev-0.2.6.5 (25 Apr 2007)

  25 Apr 2007; Paul Varner <fuzzyray@gentoo.org>
  +gentoolkit-dev-0.2.6.5.ebuild:
  revbump to re-add subversion support to echangelog (Bug #136048)

  26 Mar 2007; Paul Varner <fuzzyray@gentoo.org>
  files/digest-gentoolkit-dev-0.2.6.4, Manifest:
  Fix digest and Manifest again

  26 Mar 2007; Jeroen Roovers <jer@gentoo.org>
  files/digest-gentoolkit-dev-0.2.6.4, Manifest:
  Hopefully fix the digest and Manifest.

*gentoolkit-dev-0.2.6.4 (25 Mar 2007)

  25 Mar 2007; Paul Varner <fuzzyray@gentoo.org>