@@ -5,9 +5,7 @@ AUX gentoolkit-dev-0.2.6.2-Makefile.patch 672 RMD160 8570652efb73c788c89b593443f
 AUX gentoolkit-dev-0.2.6.4-glep-53-keywords-sorting.patch 380 RMD160 197749b3f1ac78f2cf064f854c545f0cc1ac0fdc SHA1 339d1b30ae29cb55fbace46a644c20aba0bdfc62 SHA256 f677f57d4823dc96e9d2f71cdee66d061a764130e364700b5869377028f4a656
 DIST gentoolkit-dev-0.2.6.10.tar.gz 47667 RMD160 f3a046ad204e24777579535de4847c4526905528 SHA1 a04fd6610eeaff8cb4d742d09cb07d3d8700fc72 SHA256 adaba726cdbd87971b65fedfc836e3e256f038bc1b5f82ef50834186c088ed0e
 DIST gentoolkit-dev-0.2.6.2.tar.gz 42928 RMD160 3f3e4fa292f3fcf3a997c1500b2fbee2d491b03c SHA1 218b4b5dbcc879c0aed8579909c5c211dc1747c8 SHA256 cfb474ecdcf6008b964aa57debd94925d2b7f5b5af28836c6801838df6df8221
-DIST gentoolkit-dev-0.2.6.4.tar.gz 43324 RMD160 e66b876766dabb96994ce1870172eb7314472c89 SHA1 6b12dd38aeaae4d2c38e008580856891deb2d45d SHA256 a12832b5580c7b8854c04a3d93721c71255953242f43d36963f86046bd5340a4
 EBUILD gentoolkit-dev-0.2.6.10.ebuild 1389 RMD160 260ebd4cc1a7ae0c36b8af78aabecc378c5cfe95 SHA1 919123632c80f88e516df4344a596793dee5f210 SHA256 28f8deb2a6f5f1196bee2d187192ad6ccae32bfd400ddf58d4249ff63b966160
-EBUILD gentoolkit-dev-0.2.6.2.ebuild 1284 RMD160 ef13f906a80e882e9a82da0a2a1551f6403ab038 SHA1 aaa27d39688af57fcdf752695f43b77d4f83ea3b SHA256 e0e8e161dfa96c26c4eb9265bff97efed8c5b989febe60a09f2f25c7e8fcaba6
-EBUILD gentoolkit-dev-0.2.6.4-r00.2.ebuild 1373 RMD160 05cc30df1487c8da9d607bdbbf6650072ceedb3a SHA1 9b4475c7953f1e34ed1984f5453937fefd1094bb SHA256 32f64ddf2001b780587865fa41fc8e405cdfa88b4dcbd4d6269a8cbbaed59c54
-MISC ChangeLog 8758 RMD160 49169f200881e330d769c8e0868c4f30cb07d82a SHA1 bbbf344b15ee682176b3c46fc7b8fa762f2053fd SHA256 ad5ab51e58041e492f404582d3ae39fc428e1987766c3f9ad353ebbb0116d805
+EBUILD gentoolkit-dev-0.2.6.2.ebuild 1307 RMD160 2525f3adb015ec90526e315f3b5087b7904abdf2 SHA1 5d4b4814a3c577b654082ffe10cdcc449c57869e SHA256 98d1590eb5822810b65de1ec819860673872cc36d93793c504ca60d8bb65d9ac
+MISC ChangeLog 9099 RMD160 3eb47ae1ce9eb32b6e62de8a9146c4b9344ee751 SHA1 249c20000bddbae827ed02846a31168712ae472e SHA256 4c3eac39355dffa41ae76fcc97c46e28581ad3ae822f2428bad4971f31ee3f9a
 MISC metadata.xml 282 RMD160 0eb345cd4d45d200be98d46ef58d9c7d984d0fea SHA1 e884a6236439bc56617e7fe1c48fc10a356e01a3 SHA256 bbc59170a0b8682ed3a03f67bafc63610875532ab87b33a3ad2695482624f5a8
