@@ -1,6 +1,13 @@
 # ChangeLog for app-portage/gentoolkit-dev
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.60 2009/04/29 20:44:33 fuzzyray Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.61 2009/05/05 03:49:48 fuzzyray Exp $
+
+  05 May 2009; Paul Varner <fuzzyray@gentoo.org>
+  gentoolkit-dev-0.2.6.2.ebuild, -gentoolkit-dev-0.2.6.4.ebuild,
+  -gentoolkit-dev-0.2.6.5.ebuild, -gentoolkit-dev-0.2.6.6.ebuild,
+  -gentoolkit-dev-0.2.6.8.ebuild, -gentoolkit-dev-0.2.6.9.ebuild:
+  Removed older not needed ebuilds. Added RDEPEND=$DEPEND to
+  gentoolkit-dev-0.2.6.2 ebuild.
 
 *gentoolkit-dev-0.2.6.10 (29 Apr 2009)
 
